apps/garm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garm
---
apiVersion: v1
kind: Namespace
metadata:
  name: garm-runners
