apps/garm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garm
  namespace: garm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: garm
  template:
    metadata:
      labels:
        app: garm
    spec:
      serviceAccountName: garm
      containers:
        - name: garm
          image: gitea.lumpiasty.xyz/lumpiasty/garm-k8s:r1380
          imagePullPolicy: IfNotPresent
          command:
            - /bin/garm
            - --config
            - /etc/garm/config.toml
          ports:
            - name: http
              containerPort: 9997
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config-dir
              mountPath: /etc/garm
            - name: provider-config
              mountPath: /etc/garm/provider-config.yaml
              subPath: provider-config.yaml
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: garm-lvmhdd
        - name: config-dir
          emptyDir: {}
        - name: provider-config
          configMap:
            name: garm-provider-k8s-config
