apps/garm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: garm
  name: garm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx-ingress
  rules:
    - host: garm.lumpiasty.xyz
      http:
        paths:
          - backend:
              service:
                name: garm
                port:
                  number: 9997
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - garm.lumpiasty.xyz
      secretName: garm-ingress
